refactor: 일반 예외 추가 후 엔진/cli 예외 분리.  커스텀 예외는 타입으로 교체